data/derived/sp14/progs/unify/prog1329.ml.out
Characters 92-116:
  | Sine s -> String.concat ["pi* "; exprToString s];;
                            ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type string
